--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Connexus!</string>
     <string name="action_settings">Settings</string>
     <string name="login_ads">The World\'s Greatest Photosharing App.</string>
-    <string name="authors">Kaiyuan Wang (kw26528)</string>
+    <string name="authors">Kaiyuan Wang (kw26528)/Xingyuan Wang</string>
     <string name="view_streams">View Streams</string>
 
     <!-- ViewAllStreams -->
